gateway-demo.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scg-demo
  namespace: scg-demo
  labels:
    app: scg-demo
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
spec:
  tls:
  - secretName: scg-demo-cert-tls
    hosts:
    - "scg-demo.dragonstone.tkg-aws-e2-lab.winterfell.be"
  rules:
  - host: scg-demo.dragonstone.tkg-aws-e2-lab.winterfell.be
    http:
      paths:
      - backend:
          service:
            name: scg-demo
            port:
              number: 80
        pathType: ImplementationSpecific
